--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -35,13 +35,39 @@
     justify-content: space-between;
     margin: v.$spacing-sm 0;
     gap: 1rem;
-    max-width: 90%;
+    max-width: 96%;
     margin: 0 auto;
 
     @include m.desktop {
         flex-direction: row;
-        justify-content: center;
+        justify-content: left;
         max-width: 100%;
         margin: unset;
+
+        &--homepage {
+            justify-content: center;
+        }
+    }
+}
+
+.grid-columns-2-tablet {
+    @media (min-width: 768px) and (max-width: 992px) {
+        @include m.grid(2, 0rem);
+
+        .form__input:nth-child(3) {
+            grid-column: 1 / 3;
+        }
+    }
+}
+
+.grid-columns-2 {
+    @include m.desktop {
+        @include m.grid(2, v.$spacing-sm);
+    }
+}
+
+.grid-columns-3 {
+    @include m.desktop {
+        @include m.grid(3, v.$spacing-sm);
     }
 }
