--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -17,12 +17,30 @@
         padding: 9rem 10rem;
     }
 
+    &--mandala {
+        background-image: linear-gradient(to top, transparent 50%, v.$light-gray 0%), url('/assets/bg-form-rotated.png');
+        background-position: center, bottom;
+        background-repeat: repeat, no-repeat;
+        background-size: 100%, 100% 50%;
+
+        @include m.desktop {
+            background-image: url('/assets/bg-form.svg');
+            background-position: right;
+            background-repeat: no-repeat;
+            background-size: auto;
+        }
+    }
+
     &__heading {
         margin-bottom: 1rem;
         text-align: center;
 
         &--mandala {
-            text-align: left;
+            text-align: center;
+
+            @include m.desktop {
+                text-align: left;
+            }
         }
     }
 
@@ -34,13 +52,17 @@
         margin: 0;
         
         &--mandala {
-            text-align: left;
+            text-align: center;
+
+            @include m.desktop {
+                text-align: left;
+            }
         }
     }
 
     &__input {
         text-align: left;
-        padding: 0rem .8rem;
+        padding: 0;
 
         &-textfield,
         &-select,
@@ -57,8 +79,10 @@
             -moz-border-radius: v.$border-radius-sm;
             -ms-border-radius: v.$border-radius-sm;
             -o-border-radius: v.$border-radius-sm;
+        }
 
-            &--mandala {
+        &--mandala {
+            @include m.desktop {
                 width: 50%;
             }
         }
