--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -35,14 +35,14 @@
     justify-content: space-between;
     margin: v.$spacing-sm 0;
     gap: 1rem;
-    max-width: 96%;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 5rem auto 0;
 
     @include m.desktop {
         flex-direction: row;
         justify-content: left;
         max-width: 100%;
-        margin: unset;
+        margin: 3.5rem 0 0;
 
         &--homepage {
             justify-content: center;
