--- a/app/views/requests/ask_state.html.erb
+++ b/app/views/requests/ask_state.html.erb
@@ -1,28 +1,24 @@
-<div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-  <%= form_with(scope: :session, url: ask_state_path, local: true) do |form| %>
+<main class="main">
+  <div class="container form form--mandala">
+    <h1 class="form__heading--mandala">Consultar estado de solicitud</h1>
 
-    <div id="requester_information" class="form-group">
-      <h2 class="text-center">Ver estado de solicitud</h2>
-      <div class="row">
-        <p>
-          <%= form.label "Ingrese el número de la solicitud", style: "display: block" %>
-          <%= form.text_field :identifier, class: "form-control" %>
-        </p>
+    <%= form_with(scope: :session, url: ask_state_path, local: true) do |form| %>
+      <div id="requester_information">
+        <div class="form__input--mandala">
+          <%= form.label "Código de la solicitud", class: "form__input-label" %>
+          <%= form.text_field :identifier, placeholder: "Código de solicitud", class: "form__input-textfield" %>
+        </div>
+
+        <div class="form__input--mandala">
+          <%= form.label "Correo electrónico", class: "form__input-label" %>
+          <%= form.text_field :requester_mail, placeholder: "Correo electrónico", class: "form__input-textfield" %>
+        </div>
+
+        <div class="button-group">
+          <%= form.submit "Consultar", class: "form__button-submit" %>
+          <%= link_to "Regresar", root_path, class: "form__button-back" %>
+        </div>
       </div>
-      <div class="row">
-        <p>
-          <%= form.label "Ingrese la dirección de correo electrónico", style: "display: block" %>
-          <%= form.text_field :requester_email, class: "form-control" %>
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-2">
-        <%= link_to "Cancelar", root_path, class: "btn btn-primary" %>
-      </div>
-      <div class="col-2">
-        <%= form.submit "Ver estado", class: "btn btn-primary" %>
-      </div>
-    </div>
-  <% end %>
-</div>
+    <% end %>
+  </div>
+</main>
