--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <h1 class="homepage__heading">Bienvenido/a al Sistema de Solicitudes de Servicios Generales de la Sede Occidente</h1>
     </div>
 
-    <div class="button-group homepage__buttons">
+    <div class="button-group button-group--homepage">
       <%= link_to new_request_path, class:"homepage__button" do %>
           Crear una nueva solicitud
       <% end %>
