--- a/app/views/user_accounts/shared/_links.html.erb
+++ b/app/views/user_accounts/shared/_links.html.erb
@@ -1,24 +1,14 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Iniciar sesión", new_session_path(resource_name) %><br/>
+  <%= link_to "Iniciar sesión", new_session_path(resource_name) %>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "¿Olvidó la contraseña?", new_password_path(resource_name) %><br/>
-<% end %>
-
-<%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "¿No se enviaron las instrucciones para la confirmación de la cuenta?", new_confirmation_path(resource_name) %>
-  <br/>
-<% end %>
-
-<%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "¿No se recibieron las indicaciones para el desbloqueo de la cuenta?", new_unlock_path(resource_name) %>
-  <br/>
+  <%= link_to "¿Olvidó la contraseña?", new_password_path(resource_name), class: "form__link" %>
 <% end %>
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <%= link_to "Iniciar sesión con #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post %>
-    <br/>
+    
   <% end %>
 <% end %>
