Migrando estilos de formularios (tablas) a SASS

--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -3,7 +3,6 @@
 
 .container {
     max-width: 140rem;
-    // width: 95%;
     margin: 0 auto;
 }
 
@@ -48,8 +47,13 @@
         max-width: 100%;
         margin: 3.5rem 0 0;
 
-        &--homepage {
+        &--homepage,
+        &--table {
             justify-content: center;
+        }
+
+        &--table {
+            margin: 0 auto;
         }
     }
 }
@@ -75,3 +79,16 @@
         @include m.grid(3, v.$spacing-sm);
     }
 }
+
+@media (min-width: 0px) and (max-width: 768px) {
+    .tablet-display {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .tablet-display {
+        display: table-cell;
+    }
+}
+
