--- a/app/views/user_accounts/index.html.erb
+++ b/app/views/user_accounts/index.html.erb
@@ -28,7 +28,7 @@
 <div class="container">
   <div id="employees">
     <div class="row">
-      <div class="container mt-3 mb-3 p-5 border border-2 rounded-3">
+      <div class="container">
         <%= render partial: 'user_accounts/employee_list', locals: { employees: @employees } %>
       </div>
     </div>
