--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -48,11 +48,21 @@
         font-weight: normal;
         font-size: v.$fs-large;
         text-align: center;
-        padding: 3rem 0 3.5rem;
+        padding: 3rem 0 3rem;
         margin: 0;
         
         &--mandala {
             text-align: center;
+
+            @include m.desktop {
+                text-align: left;
+            }
+        }
+
+        &--table {
+            font-weight: bold;
+            margin: 2rem 0;
+            padding: 0;
 
             @include m.desktop {
                 text-align: left;
