Migrando estilos de vistas (reporte de solicitudes) a SASS

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -12,7 +12,7 @@ $light-gray: #ececec;
 $dark-gray: #5e5e5e;
 
 $success-color: #4CAF50;
-$warning-color: #E79800;
+$warning-color: #e7a223;
 $danger-color: #c92a19;
 
 // Font Properties
