--- a/app/assets/stylesheets/utilities.scss
+++ b/app/assets/stylesheets/utilities.scss
@@ -84,15 +84,21 @@
     }
 }
 
-@media (min-width: 0px) and (max-width: 992px) {
+@media (min-width: 0px) and (max-width: 768px) {
     .tablet-display {
         display: none;
     }
 }
 
-@media (min-width: 992px) and (max-width: 1600px) {
+@media (min-width: 768px) and (max-width: 992px) {
     .tablet-display {
         display: table-cell;
+    }
+}
+
+@media (max-width: 992px) {
+    .desktop-display {
+        display: none;
     }
 }
 
