--- a/app/views/user_accounts/registrations/edit.html.erb
+++ b/app/views/user_accounts/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <div class="container form form--mandala">
     <h1 class="form__heading--mandala">Cambiar contraseña</h1>
 
-    <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="form__input--mandala">
         <%= f.label "Correo electrónico", class: "form__input-label" %>
         <%= f.text_field :email, autofocus: true, autocomplete: "email", class: "form__input-textfield", disabled: true %>
