Se corrige error en el cambio de contraseña

--- a/app/views/user_accounts/registrations/edit.html.erb
+++ b/app/views/user_accounts/registrations/edit.html.erb
@@ -31,7 +31,7 @@
 
       <div class="form__input--mandala">
         <%= f.label "Contraseña actual", class: "form__input-label" %> <span class="text-danger">*</span>
-        <%= f.password_field :password, autocomplete: "new-password", placeholder: "Contraseña actual", class: "form__input-textfield" %>
+        <%= f.password_field :current_password, autocomplete: "new-password", placeholder: "Contraseña actual", class: "form__input-textfield" %>
       </div>
 
       <div class="button-group">
